@@ -111,6 +111,7 @@
 	- rework most of rpmdb.c prepatory to implementing duplicates.
 	- fix: 2 memory leaks in headerSprintf.
 	- fix: db mire's access out-of-bounds memory.
+	- plug most install mode leaks.
 
 4.0.3 -> 4.0.4:
 	- solaris: translate i86pc to i386 (#57182).
